--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,8 @@
 
 .top-banner__inner .top-banner__text {
   margin-left: 54px;
+  color: #fff;
+  font-size: 20px;
 }
 
 .top-banner__inner .top-banner__h2 {
