--- a/css/style.css
+++ b/css/style.css
@@ -321,3 +321,33 @@ textarea {
   border-radius: 4px;
   font-size: 16px;
 }
+
+
+/*RESPONSIVIDADE*/
+
+@media (width <=768px) {
+  .site-container{
+    width: 50%;
+  }
+
+  .image{
+    max-width: 300px;
+    margin-left: -35%;
+  }
+
+  .section-top-banner{
+    background: none;
+    
+  }
+
+  .navigation{
+    width: 15%;
+   margin-left: 0.2rem;
+  }
+  .main-navigation{
+    width: 100vh;
+    height: 100vh;
+
+
+  }
+}
