--- a/css/style.css
+++ b/css/style.css
@@ -326,29 +326,32 @@ textarea {
 /*RESPONSIVIDADE*/
 
 @media (width <=768px) {
-  .site-container{
-    width: 50%;
-  }
-
   .image{
-    width: 50vh;
+    width: 60vh;
     height: 100vh;
     margin-left: -38%;
 
   }
 
-  .section-top-banner{
-    background: none;
-    
+  .top-banner__text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+
+
+   
+   
   }
 
   .navigation{
     width: 15%;
-   margin-left: 0.2rem;
+    margin-left: 0.2rem;
   }
   .main-navigation{
-    width: 100vh;
-    height: 100vh;
+    width: 80vh;
+    height: 80vh;
 
 
   }
