--- a/css/style.css
+++ b/css/style.css
@@ -327,7 +327,8 @@ textarea {
 
 @media (width <=768px) {
   .image{
-    width: 60vh;
+    position:relative;
+    width: 100%;
     height: 100vh;
     margin-left: -38%;
 
@@ -339,10 +340,10 @@ textarea {
     justify-content: center;
     align-items: center;
     position: fixed;
+  }
 
-
-   
-   
+  .top-banner__inner .top-banner__h2{
+    font-size: 90px;
   }
 
   .navigation{
