--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@
   margin: 0 auto;
 }
 
+html {
+  font-family: Poppins;
+}
+
 @media (max-width: 1250px) {
   .site-container {
     width: 90%;
@@ -49,6 +53,7 @@
   border: 2px solid #fff;
   border-radius: 7px;
   background-color: rgb(154, 92, 170);
+  
 }
 
 .main-navigation .main-navigation-ul li {
