--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ html {
   right: 20px;
   width: 30px;
   height: 3px;
-  background-color: rgb(223, 13, 13);
+  background-color:  #25d366;
   margin: 6px 0;
   transition: 0.4s;
 }
