--- a/css/style2.css
+++ b/css/style2.css
@@ -66,7 +66,7 @@ nav ul li a:focus {
 }
 
 nav ul li a:focus {
-	color: white;
+	color: rgb(215, 140, 140);
 }
 
 nav ul li a:not(:only-child)::after {
